# Projet_CMake

./: CMakeLists.txt  Doxyfile.in  main.cpp
.github/workflows/: ci.yml
docs/: README.md  mainpage.md
include/: example_class.h  factorial.h  fibonacci.h  palindrome.h  prime.h
src/: CMakeLists.txt  example_class.cpp  factorial.cpp  fibonacci.cpp  palindrome.cpp  prime.cpp
tests/: CMakeLists.txt  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
